# CCDTune

./: CMakeLists.txt  README.md
GetImg/: CMakeLists.txt  ccdclient.cpp  ccdclient.h  main.cpp
